--- a/Views/game.cshtml
+++ b/Views/game.cshtml
@@ -1,8 +1,15 @@
 <p>
   @for(var i = 0; i < @Model.GetWord().Length; i++)
   {
-  <span id="@i"> _ </span>
-}
+    @if (@Model.GetCorrectGuesses().Contains(i))
+    {
+      <span id="@i"> @Model.GetGameWord()[i] </span>
+    }
+    else
+    {
+      <span id="@i"> _ </span>
+    }
+  }
 </p>
 
 <p>Letters guessed:</p>
